--- a/configuration.yaml
+++ b/configuration.yaml
@@ -4,53 +4,54 @@ default_config:
 # Load frontend themes from the themes folder
 frontend:
   themes: !include_dir_merge_named themes
-template: !include sidebar.yaml
 
-lovelace:
-  mode: yaml
-  resources:
-    - url: /hacsfiles/button-card/button-card.js
-      type: module
-    - url: /hacsfiles/lovelace-layout-card/layout-card.js
-      type: module
-    - url: /hacsfiles/swipe-card/swipe-card.js
-      type: module
-    - url: /hacsfiles/lovelace-xiaomi-vacuum-map-card/xiaomi-vacuum-map-card.js
-      type: module
-    - url: /hacsfiles/mini-graph-card/mini-graph-card-bundle.js
-      type: module
-    - url: /hacsfiles/lovelace-mushroom/mushroom.js
-      type: module
-    - url: /hacsfiles/mini-media-player/mini-media-player-bundle.js
-      type: module
-    - url: /hacsfiles/vertical-stack-in-card/vertical-stack-in-card.js
-      type: module
-    - url: /hacsfiles/battery-state-card/battery-state-card.js
-      type: module
-    - url: /hacsfiles/rgb-light-card/card.js
-      type: module
-    - url: /hacsfiles/home-assistant-sun-card/home-assistant-sun-card.js
-      type: module
-    - url: /hacsfiles/banner-card/banner-card.js
-      type: module
-    - url: /hacsfiles/hass-shutter-card/hass-shutter-card.js
-      type: module
-    - url: /hacsfiles/timer-bar-card/timer-bar-card.js
-      type: module
-    - url: /hacsfiles/lovelace-fold-entity-row/fold-entity-row.js
-      type: module
-    - url: /hacsfiles/lovelace-slider-entity-row/slider-entity-row.js
-      type: module
-    - url: /hacsfiles/my-cards/my-cards.js
-      type: module
-    - url: /hacsfiles/light-entity-card/light-entity-card.js
-      type: module
-    - url: /hacsfiles/lovelace-auto-entities/auto-entities.js
-      type: module
-    - url: /hacsfiles/simple-weather-card/simple-weather-card-bundle.js
-      type: module
-    - url: /hacsfiles/lovelace-state-switch/state-switch.js
-      type: module
+# lovelace:
+#   mode: yaml
+#   resources:
+#     - url: /hacsfiles/button-card/button-card.js
+#       type: module
+#     - url: /hacsfiles/lovelace-layout-card/layout-card.js
+#       type: module
+#     - url: /hacsfiles/swipe-card/swipe-card.js
+#       type: module
+#     - url: /hacsfiles/lovelace-xiaomi-vacuum-map-card/xiaomi-vacuum-map-card.js
+#       type: module
+#     - url: /hacsfiles/mini-graph-card/mini-graph-card-bundle.js
+#       type: module
+#     - url: /hacsfiles/lovelace-mushroom/mushroom.js
+#       type: module
+#     - url: /hacsfiles/mini-media-player/mini-media-player-bundle.js
+#       type: module
+#     - url: /hacsfiles/vertical-stack-in-card/vertical-stack-in-card.js
+#       type: module
+#     - url: /hacsfiles/battery-state-card/battery-state-card.js
+#       type: module
+#     - url: /hacsfiles/rgb-light-card/card.js
+#       type: module
+#     - url: /hacsfiles/home-assistant-sun-card/home-assistant-sun-card.js
+#       type: module
+#     - url: /hacsfiles/banner-card/banner-card.js
+#       type: module
+#     - url: /hacsfiles/hass-shutter-card/hass-shutter-card.js
+#       type: module
+#     - url: /hacsfiles/timer-bar-card/timer-bar-card.js
+#       type: module
+#     - url: /hacsfiles/lovelace-fold-entity-row/fold-entity-row.js
+#       type: module
+#     - url: /hacsfiles/lovelace-slider-entity-row/slider-entity-row.js
+#       type: module
+#     - url: /hacsfiles/my-cards/my-cards.js
+#       type: module
+#     - url: /hacsfiles/light-entity-card/light-entity-card.js
+#       type: module
+#     - url: /hacsfiles/lovelace-auto-entities/auto-entities.js
+#       type: module
+#     - url: /hacsfiles/simple-weather-card/simple-weather-card-bundle.js
+#       type: module
+#     - url: /hacsfiles/lovelace-state-switch/state-switch.js
+#       type: module
+#     - url: /hacsfiles/lovelace-card-mod/card-mod.js
+#       type: module
 
 # Text to speech
 tts:
