--- a/ui_lovelace_minimalist/dashboard/ui-lovelace.yaml
+++ b/ui_lovelace_minimalist/dashboard/ui-lovelace.yaml
@@ -1,9 +1,13 @@
 ---
 button_card_templates: !include_dir_merge_named "../../custom_components/ui_lovelace_minimalist/__ui_minimalist__/ulm_templates/"
 
-title: "Minimalisdt"
+title: "Home"
 theme: "minimalist-desktop"
 background: "var(--background-image)"
-# views: !include_dir_merge_list "views/"
-views: !include views/home.yaml
-
+views:
+  - !include views/home.yaml
+  - !include views/living_room.yaml
+  - !include views/kitchen.yaml
+  - !include views/bedroom.yaml
+  - !include views/office.yaml
+  - !include views/house.yaml
