--- a/configuration.yaml
+++ b/configuration.yaml
@@ -5,54 +5,6 @@ default_config:
 frontend:
   themes: !include_dir_merge_named themes
 
-# lovelace:
-#   mode: yaml
-#   resources:
-#     - url: /hacsfiles/button-card/button-card.js
-#       type: module
-#     - url: /hacsfiles/lovelace-layout-card/layout-card.js
-#       type: module
-#     - url: /hacsfiles/swipe-card/swipe-card.js
-#       type: module
-#     - url: /hacsfiles/lovelace-xiaomi-vacuum-map-card/xiaomi-vacuum-map-card.js
-#       type: module
-#     - url: /hacsfiles/mini-graph-card/mini-graph-card-bundle.js
-#       type: module
-#     - url: /hacsfiles/lovelace-mushroom/mushroom.js
-#       type: module
-#     - url: /hacsfiles/mini-media-player/mini-media-player-bundle.js
-#       type: module
-#     - url: /hacsfiles/vertical-stack-in-card/vertical-stack-in-card.js
-#       type: module
-#     - url: /hacsfiles/battery-state-card/battery-state-card.js
-#       type: module
-#     - url: /hacsfiles/rgb-light-card/card.js
-#       type: module
-#     - url: /hacsfiles/home-assistant-sun-card/home-assistant-sun-card.js
-#       type: module
-#     - url: /hacsfiles/banner-card/banner-card.js
-#       type: module
-#     - url: /hacsfiles/hass-shutter-card/hass-shutter-card.js
-#       type: module
-#     - url: /hacsfiles/timer-bar-card/timer-bar-card.js
-#       type: module
-#     - url: /hacsfiles/lovelace-fold-entity-row/fold-entity-row.js
-#       type: module
-#     - url: /hacsfiles/lovelace-slider-entity-row/slider-entity-row.js
-#       type: module
-#     - url: /hacsfiles/my-cards/my-cards.js
-#       type: module
-#     - url: /hacsfiles/light-entity-card/light-entity-card.js
-#       type: module
-#     - url: /hacsfiles/lovelace-auto-entities/auto-entities.js
-#       type: module
-#     - url: /hacsfiles/simple-weather-card/simple-weather-card-bundle.js
-#       type: module
-#     - url: /hacsfiles/lovelace-state-switch/state-switch.js
-#       type: module
-#     - url: /hacsfiles/lovelace-card-mod/card-mod.js
-#       type: module
-
 # Text to speech
 tts:
   - platform: google_translate
@@ -124,16 +76,11 @@ http:
     - 192.168.2.27
     - 192.168.2.125
 
+bluetooth:
+
 fastdotcom:
   scan_interval:
     hours: 12
-
-# Google Home example configuration.yaml entry
-#emulated_hue:
-#  listen_port: 80
-#  host_ip: 192.168.2.220
-#  advertise_ip: 192.168.2.220
-#    # Google Home does not work on different ports.
 
 automation: !include automations.yaml
 script: !include scripts.yaml
