--- a/ui_lovelace_minimalist/dashboard/views/kitchen.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/kitchen.yaml
@@ -47,37 +47,39 @@ cards:
           ulm_card_light_enable_color: true
           ulm_card_light_force_background_color: true
 
-  - type: entities
-    entities:
-      - entity: switch.lave_vaisselle_power.
-      
-      - entity: binary_sensor.lave_vaisselle_door
-      - type: buttons
+  - type: custom:stack-in-card
+    title: Lave-vaisselle
+    mode: vertical
+    cards:
+      - type: entities
         entities:
-          - entity: switch.lave_vaisselle_program_eco50
-            name: Eco
-            icon: mdi:sprout
-          - entity: switch.lave_vaisselle_program_auto2
-            name: Auto
-            icon: mdi:refresh-auto
-          - entity: switch.lave_vaisselle_program_intensiv70
-            name: Intense 70°C
-            icon: mdi:thermometer-high
-          - entity: switch.lave_vaisselle_program_quick45
-            name: Quick 45°C
-            icon: mdi:fast-forward-45
-          - entity: switch.lave_vaisselle_program_super60
-            name: 1h 45°C
-            icon: mdi:fast-forward-60
-
-  # https://github.com/rianadon/timer-bar-card/issues/36
-  - type: custom:timer-bar-card
-    entities:
-      - entity: sensor.lave_vaisselle_operation_state
-        name: Temps restant
-        active_state: Run
-        active_icon: mdi:dishwasher
-        end_time:
-          entity: sensor.lave_vaisselle_remaining_program_time
-        text_width: 4em
-        bar_width: calc(70% - 10em)
+          - entity: switch.lave_vaisselle_power
+          - entity: binary_sensor.lave_vaisselle_door
+          # https://github.com/rianadon/timer-bar-card/issues/36
+          - type: custom:timer-bar-card
+            entities:
+              - entity: sensor.lave_vaisselle_operation_state
+                name: Temps restant
+                active_state: Run
+                active_icon: mdi:dishwasher
+                end_time:
+                  entity: sensor.lave_vaisselle_remaining_program_time
+                text_width: 4em
+                bar_width: calc(70% - 10em)
+          - type: buttons
+            entities:
+              - entity: switch.lave_vaisselle_program_eco50
+                name: Eco
+                icon: mdi:sprout
+              - entity: switch.lave_vaisselle_program_auto2
+                name: Auto
+                icon: mdi:refresh-auto
+              - entity: switch.lave_vaisselle_program_intensiv70
+                name: Intense 70°C
+                icon: mdi:thermometer-high
+              - entity: switch.lave_vaisselle_program_quick45
+                name: Quick 45°C
+                icon: mdi:fast-forward-45
+              - entity: switch.lave_vaisselle_program_super60
+                name: 1h 45°C
+                icon: mdi:fast-forward-60
