--- a/ui_lovelace_minimalist/dashboard/ui-lovelace.yaml
+++ b/ui_lovelace_minimalist/dashboard/ui-lovelace.yaml
@@ -11,3 +11,4 @@ views:
   - !include views/bedroom.yaml
   - !include views/office.yaml
   - !include views/house.yaml
+  - !include views/network.yaml
