--- a/ui_lovelace_minimalist/dashboard/views/home.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/home.yaml
@@ -60,7 +60,7 @@ cards:
       ###### SALON ######
       - type: "custom:button-card"
         template:
-          - card_esh_room
+          - card_esh_room_lights
           - yellow_on
         name: Salon
         entity: switch.prise_1
@@ -70,7 +70,10 @@ cards:
           navigation_path: "living_room"
         variables:
           ulm_custom_card_esh_room_light_entity: switch.prise_1
-          #ulm_custom_card_esh_room_climate_entity: climate.thermostat
+          ulm_custom_card_esh_room_climate_entity: light.ampoule_rgbw_salon
+        state:
+          - value: "off"
+            icon: "mdi:lightbulb"
         label: >
           [[[
             return "🌡️ " + states['sensor.capteur_temperature_humidite_temperature'].state + " °C" + " 💧 " + states['sensor.capteur_temperature_humidite_humidity'].state + " %"
