--- a/ui_lovelace_minimalist/custom_cards/custom_card_esh_room_lights.yaml
+++ b/ui_lovelace_minimalist/custom_cards/custom_card_esh_room_lights.yaml
@@ -196,7 +196,7 @@ card_esh_room_lights:
       - filter: "opacity(40%)"
       - margin-left: "12px"
     custom_fields:
-      light:
+      light1:
         - display: >
             [[[
               if (variables.ulm_custom_card_esh_room_light_entity_1) {
@@ -205,7 +205,7 @@ card_esh_room_lights:
                   return "none";
               }
             ]]]
-      climate:
+      light2:
         - display: >
             [[[
               if (variables.ulm_custom_card_esh_room_light_entity_2) {
@@ -215,7 +215,7 @@ card_esh_room_lights:
               }
             ]]]
   custom_fields:
-    light:
+    light1:
       card:
         entity: "[[[ return variables.ulm_custom_card_esh_room_light_entity_1 ]]]"
         name: "[[[ return name ]]]"
@@ -257,17 +257,30 @@ card_esh_room_lights:
             }
             return vars;
           ]]]
-    climate:
+    light2:
       card:
         entity: "[[[ return variables.ulm_custom_card_esh_room_light_entity_2 ]]]"
         name: "[[[ return name ]]]"
         state:
+          - value: "on"
+            icon: "[[[ return variables.ulm_card_esh_room_light_icon_on; ]]]"
+            styles:
+              icon:
+                - color: "rgba(var(--color-yellow), 1)"
+              img_cell:
+                - background-color: >-
+                    [[[
+                      if (variables.ulm_custom_card_esh_room_light_entity_2) {
+                        var color = states[variables.ulm_custom_card_esh_room_light_entity_2].attributes.rgb_color;
+                        if (color && variables.ulm_card_dynamic_color) {
+                          return 'rgba(' + color + ', 0.3)';
+                        }
+                      }
+                      return 'rgba(var(--color-yellow), 0.2)';
+                    ]]]
           - value: "off"
-            icon: "mdi:lightbulb-off"
+            icon: "[[[ return variables.ulm_card_esh_room_light_icon_off; ]]]"
         type: "custom:button-card"
-        styles:
-          card:
-            - margin-top: "5px"
         template:
           - "widget_icon"
           - "ulm_actions_card"
@@ -275,12 +288,12 @@ card_esh_room_lights:
         variables: >
           [[[
             let vars = {};
-            vars.ulm_card_thermostat_enable_popup = variables.ulm_card_light_enable_popup;
-            if (variables.ulm_card_thermostat_enable_popup) {
+            vars.ulm_card_light_enable_popup = variables.ulm_card_light_enable_popup;
+            if (variables.ulm_card_light_enable_popup) {
               vars.ulm_custom_popup = {
-                'template': 'popup_thermostat_temperature',
+                'template': 'popup_light_brightness',
                 'popup_variables': {
-                  'ulm_popup_thermostat_entity': variables.ulm_custom_card_esh_room_light_entity_2,
+                  'ulm_popup_light_entity': variables.ulm_custom_card_esh_room_light_entity_2,
                 }
               };
             }
