--- a/configuration.yaml
+++ b/configuration.yaml
@@ -14,6 +14,18 @@ media_player:
     host: 192.168.2.28
 
 sensor:
+  - platform: template
+    sensors:
+      freebox_download_speed_mbytes_per_sec:
+        friendly_name: "Download speed"
+        value_template: "{{ (states('sensor.freebox_download_speed') | float / 1000) | round(3) }}"
+        unit_of_measurement: MB/s
+        device_class: data_rate
+      freebox_upload_speed_mbytes_per_sec:
+        friendly_name: "Uppload speed"
+        value_template: "{{ (states('sensor.freebox_upload_speed') | float / 1000) | round(3) }}"
+        unit_of_measurement: MB/s
+        device_class: data_rate
   - platform: time_date
     display_options:
       - "time"
