--- a/ui_lovelace_minimalist/dashboard/views/home.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/home.yaml
@@ -76,7 +76,7 @@ cards:
             icon: "mdi:lightbulb"
         label: >
           [[[
-            return "🌡️ " + states['sensor.capteur_temperature_humidite_temperature'].state + " °C" + "<br /> 💧 " + states['sensor.capteur_temperature_humidite_humidity'].state + " %"
+            return "🌡️" + states['sensor.capteur_temperaure_humidite_salon_temperature'].state + " °C" + "<br /> 💧" + states['sensor.capteur_temperaure_humidite_salon_humidity'].state + " %"
           ]]]
       ###### CUISINE ######
       - type: "custom:button-card"
@@ -91,7 +91,10 @@ cards:
           navigation_path: "kitchen"
         variables:
           ulm_custom_card_esh_room_light_entity: light.ampoule_w_couloir_cuisine_salon
-        label: '[[[ return states["sensor.capteur_temperature_humidite_temperature"].state + "°C" ]]]'
+        label: >
+          [[[
+            return "🌡️" + states['sensor.capteur_temperaure_humidite_salon_temperature'].state + " °C" + "<br /> 💧" + states['sensor.capteur_temperaure_humidite_salon_humidity'].state + " %"
+          ]]]
       ###### Chambre ######
       - type: "custom:button-card"
         template:
