--- a/ui_lovelace_minimalist/dashboard/views/office.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/office.yaml
@@ -34,3 +34,13 @@ cards:
           ulm_card_graph_hours: 24
           ulm_card_graph_group_by: interval
           ulm_card_graph_line_width: 5
+
+  - type: horizontal-stack
+    cards:
+      - type: "custom:button-card"
+        template: card_light
+        entity: switch.switch_bureau
+        variables:
+          ulm_card_light_name: Lumière
+          ulm_card_light_enable_color: true
+          ulm_card_light_force_background_color: true
