--- a/automations.yaml
+++ b/automations.yaml
@@ -1,17 +1,3 @@
-- id: '1672770094396'
-  alias: Nouvelle automatisation
-  description: ''
-  trigger:
-  - platform: time
-    at: '19:25:00'
-  condition: []
-  action:
-  - device_id: d65adb7ef8988cc51cadf93952a717c8
-    domain: mobile_app
-    type: notify
-    message: zzzz
-    title: ssss
-  mode: single
 - id: '1672858375016'
   alias: Ouverture Volet Lever
   description: ''
@@ -63,6 +49,7 @@
     entity_id: cover.volet_salon
     type: set_position
     position: 0
+    enabled: true
   mode: single
 - id: '1673739340001'
   alias: Allumer PC Backlight
@@ -177,3 +164,78 @@
     value_template: '{{ states(''sensor.speedtest_download'')|float >= 10 }}'
   action:
   - service: shell_command.green
+- id: '1689715410941'
+  alias: Enable/Disable wallpanel charging
+  description: ''
+  trigger:
+  - platform: numeric_state
+    entity_id: sensor.android_bluedroid_batterie
+    below: 25
+    id: below
+  - platform: numeric_state
+    entity_id: sensor.android_bluedroid_batterie
+    above: 90
+    id: above
+  condition: []
+  action:
+  - choose:
+    - conditions:
+      - condition: trigger
+        id:
+        - below
+      sequence:
+      - service: switch.turn_on
+        data: {}
+        target:
+          device_id: 86b32369f4192c320d4d20d6a84ae7de
+    - conditions:
+      - condition: trigger
+        id:
+        - above
+      sequence:
+      - service: switch.turn_off
+        data: {}
+        target:
+          device_id: 86b32369f4192c320d4d20d6a84ae7de
+  mode: single
+- id: '1689719352340'
+  alias: Wallpanel screen on motion
+  description: ''
+  trigger:
+  - platform: state
+    entity_id:
+    - binary_sensor.capteur_mouvement_salon_occupancy
+    to: 'on'
+    id: motion_living_room_detected
+  - platform: state
+    entity_id:
+    - binary_sensor.capteur_mouvement_salon_occupancy
+    to: 'off'
+    id: motion_living_room_non_detected
+  condition: []
+  action:
+  - choose:
+    - conditions:
+      - condition: trigger
+        id:
+        - motion_living_room_detected
+      sequence:
+      - service: switch.turn_on
+        data: {}
+        target:
+          entity_id: switch.android_bluedroid_screen
+    - conditions:
+      - condition: trigger
+        id:
+        - motion_living_room_non_detected
+      sequence:
+      - delay:
+          hours: 0
+          minutes: 1
+          seconds: 0
+          milliseconds: 0
+      - service: switch.turn_off
+        data: {}
+        target:
+          entity_id: switch.android_bluedroid_screen
+  mode: single
