--- a/ui_lovelace_minimalist/dashboard/views/bedroom.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/bedroom.yaml
@@ -1,6 +1,7 @@
 title: "Chambre"
 path: "bedroom"
 icon: "mdi:bed-double"
+type: custom:vertical-layout
 cards:
   - type: "custom:button-card"
     template: chip_back
