--- a/ui_lovelace_minimalist/dashboard/views/kitchen.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/kitchen.yaml
@@ -1,6 +1,7 @@
 title: "Cuisine"
 path: "kitchen"
 icon: "mdi:fridge"
+type: custom:vertical-layout
 cards:
   - type: "custom:button-card"
     template: chip_back
