--- a/ui_lovelace_minimalist/dashboard/views/living_room.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/living_room.yaml
@@ -1,6 +1,7 @@
 title: "Salon"
 path: "living_room"
 icon: "mdi:sofa"
+type: custom:vertical-layout
 cards:
   - type: "custom:button-card"
     template: chip_back
