--- a/ui_lovelace_minimalist/dashboard/views/living_room.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/living_room.yaml
@@ -43,9 +43,9 @@ cards:
     cards:
       - type: "custom:button-card"
         template: card_light
-        entity: switch.prise_1
+        entity: light.lampadaire_salon
         variables:
-          ulm_card_light_name: Prise Lampadère
+          ulm_card_light_name: Lampadaire Salon
           ulm_card_light_enable_color: true
           ulm_card_light_force_background_color: true
       - type: "custom:button-card"
@@ -116,7 +116,6 @@ cards:
     entity: vacuum.roborock_s7_maxv
     variables:
       ulm_card_vacuum_enable_popup: true
-      ulm_card_vacuum_camera: camera.xiaomi_cloud_map_extractor
       ulm_card_vacuum_camera_toggle: true
 
   - type: "custom:button-card"
@@ -130,4 +129,4 @@ cards:
         variables:
           ulm_card_binary_sensor_alert: true
           ulm_show_last_changed: true
-        entity: binary_sensor.roborock_s7_maxv_water_shortage
+        entity: binary_sensor.roborock_s7_maxv_penurie_d_eau
