--- a/ui_lovelace_minimalist/dashboard/views/office.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/office.yaml
@@ -45,3 +45,10 @@ cards:
           ulm_card_light_name: Lumière
           ulm_card_light_enable_color: true
           ulm_card_light_force_background_color: true
+      - type: "custom:button-card"
+        template: card_light
+        entity: light.lampe_rgbw_bureau_pc
+        variables:
+          ulm_card_light_name: Lampe RGBW Bureau Mathieu
+          ulm_card_light_enable_color: true
+          ulm_card_light_force_background_color: true
