--- a/automations.yaml
+++ b/automations.yaml
@@ -215,3 +215,42 @@
         target:
           entity_id: switch.android_bluedroid_screen
   mode: single
+- id: '1697749826124'
+  alias: Lessive - Notif
+  description: ''
+  use_blueprint:
+    path: sbyx/notify-or-do-something-when-an-appliance-like-a-dishwasher-or-washing-machine-finishes.yaml
+    input:
+      power_sensor: sensor.prise_lave_linge_power
+      starting_threshold: 5
+      starting_hysteresis: 3
+      finishing_threshold: 1
+      actions:
+      - service: notify.mobile_app_cph2399
+        data:
+          message: Lessive terminée
+          data:
+            persistent: true
+            tag: washing_machine
+            actions:
+            - action: EMPTY_DONE
+              title: "\U0001F9FAOK c'est vidé!"
+      - wait_for_trigger:
+        - platform: event
+          event_type: mobile_app_notification_action
+          event_data:
+            action: EMPTY_DONE
+        continue_on_timeout: false
+        enabled: true
+      - service: notify.mobile_app_cph2399
+        data:
+          message: clear_notification
+          data:
+            tag: washing_machine
+        enabled: true
+      pre_actions:
+      - service: notify.mobile_app_cph2399
+        data:
+          message: "Lessive lancée \U0001F9FC"
+          title: Machine goes BRRRRRR
+      finishing_hysteresis: 2
